[package]
name          = "types"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description   = "Foundation primitives for Lean Ethereum: wide integers, Boolean, BasisPoint, byte arrays, error type. Tier 0 — no project deps."

[lints]
workspace = true

[dependencies]
ruint     = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest          = { workspace = true }
static_assertions = { workspace = true }
