[package]
name          = "runtime-api"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description   = "Lean HTTP API + Prometheus metrics. Implementation lands in a later issue (Tier 6)."

[lints]
workspace = true

[dependencies]
