[package]
name          = "lean-api"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description   = "Lean HTTP API + Prometheus metrics."

[lints]
workspace = true

[dependencies]
lean-core = { path = "../core" }
protocol     = { path = "../../protocol" }
storage      = { path = "../../storage" }
types        = { path = "../../types" }
axum         = { workspace = true, features = ["json"] }
prometheus   = { workspace = true }
serde        = { workspace = true, features = ["derive"] }
tokio        = { workspace = true }
tokio-util   = { workspace = true }
tracing      = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
async-trait  = { workspace = true }
parking_lot  = { workspace = true }

[dev-dependencies]
serde_json = "1"
tower      = { version = "0.4", features = ["util"] }
