[package]
name          = "lean-chain"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description   = "Chain service: engine (consensus execution boundary) + single-writer tick driver."

[lints]
workspace = true

[features]
# Exposes the in-crate engine fixture builders (`anchor_pair`,
# `engine_at_genesis`, `produce_signed_block`) under
# `lean_chain::engine::test_fixtures` so downstream crates
# (`lean-sync`, `node`) can drive integration tests without
# duplicating the genesis builders.
test-fixtures = []

[dependencies]
lean-core    = { path = "../core" }
storage      = { path = "../../storage" }
lean-wire    = { path = "../../networking" }
forkchoice   = { path = "../../forkchoice" }
protocol     = { path = "../../protocol" }
ssz          = { path = "../../ssz" }
config       = { path = "../../config" }
types        = { path = "../../types" }
tokio        = { workspace = true }
tokio-util   = { workspace = true }
async-trait  = { workspace = true }
tracing      = { workspace = true }
parking_lot  = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }

[dev-dependencies]
# Self-dep enables the `test-fixtures` feature for integration tests under
# `tests/`. Cargo unifies features across the dep graph, so this turns the
# in-crate `engine::test_fixtures` module on without changing the published
# library surface.
lean-chain        = { path = ".", features = ["test-fixtures"] }
static_assertions = { workspace = true }
tokio             = { workspace = true, features = ["test-util"] }
criterion         = { workspace = true }

# loom is pulled ONLY under `--cfg loom`; the default test/clippy build never
# sees it, so VERIFY is unaffected. Opt-in concurrency models live in
# `tests/loom_import.rs` (gated `#![cfg(loom)]`).
[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"

[[bench]]
name    = "engine_import"
harness = false
