[package]
name          = "lean-duties"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description   = "Duties service: narrow devnet0 proposer / attester scheduler (Tier 6)."

[lints]
workspace = true

[dependencies]
lean-core      = { path = "../core" }
lean-chain     = { path = "../chain" }
protocol          = { path = "../../protocol" }
config            = { path = "../../config" }
tokio             = { workspace = true }
tokio-util        = { workspace = true }
futures           = { workspace = true }
async-trait       = { workspace = true }
tracing           = { workspace = true }
parking_lot       = { workspace = true }
thiserror         = { workspace = true }
anyhow            = { workspace = true }
serde             = { workspace = true }
serde_yaml        = { workspace = true }
# `static_assertions` is macro-only / no_std / zero-runtime-cost.
# Promoted from dev-deps so the compile-time wiring proofs in
# `src/wiring.rs` gate `cargo check` / `cargo build`, not just tests.
static_assertions = { workspace = true }

[dev-dependencies]
types = { path = "../../types" }
tokio = { workspace = true, features = ["test-util"] }
criterion = { workspace = true }

[[bench]]
name    = "local_proposer"
harness = false
