[package]
name          = "p2p-rpc"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description   = "Contract surface for the p2p req/resp layer — RpcProvider trait + RpcError + NoOpRpcProvider. No libp2p deps."

[lints]
workspace = true

[dependencies]
lean-wire = { path = "../../networking" }
protocol  = { path = "../../protocol" }
types     = { path = "../../types" }
thiserror = { workspace = true }
