[package]
name          = "runtime-p2p"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description   = "libp2p QUIC-v1 host construction with gossipsub + request_response + identify (Tier 6)."

[lints]
workspace = true

[dependencies]
lean-core      = { path = "../core" }
networking        = { path = "../../networking" }
protocol          = { path = "../../protocol" }
config            = { path = "../../config" }
ssz               = { path = "../../ssz" }
types             = { path = "../../types" }
tokio             = { workspace = true }
tokio-util        = { workspace = true }
async-trait       = { workspace = true }
tracing           = { workspace = true }
parking_lot       = { workspace = true }
thiserror         = { workspace = true }
anyhow            = { workspace = true }
libp2p            = { workspace = true }
hex               = { workspace = true }
snap              = { workspace = true }
serde             = { workspace = true }
serde_yaml        = { workspace = true }
futures           = { workspace = true }
# Promoted from dev-deps so the compile-time wiring proofs in
# `src/wiring.rs` gate `cargo check` / `cargo build`, not just tests.
static_assertions = { workspace = true }

[dev-dependencies]
fixtures = { path = "../../fixtures" }
tempfile    = { workspace = true }
tokio       = { workspace = true, features = ["test-util"] }
