[package]
name          = "lean-sync"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
description   = "Sync service: peer-driven BlocksByRoot backfill loop (Tier 6)."

[lints]
workspace = true

[dependencies]
lean-core  = { path = "../core" }
lean-chain = { path = "../chain" }
lean-wire       = { path = "../../networking" }
engine        = { path = "../../engine" }
protocol      = { path = "../../protocol" }
types         = { path = "../../types" }
tokio         = { workspace = true }
tokio-util    = { workspace = true }
async-trait   = { workspace = true }
tracing       = { workspace = true }
parking_lot   = { workspace = true }
thiserror     = { workspace = true }
anyhow        = { workspace = true }

[dev-dependencies]
engine            = { path = "../../engine", features = ["test-fixtures"] }
storage           = { path = "../../storage" }
ssz               = { path = "../../ssz" }
static_assertions = { workspace = true }
tokio             = { workspace = true, features = ["test-util"] }
